--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,1 @@
-{
-  "version": 2,
-  "build": { "src": "./index.js", "use": "@vercel/node" },
-  "routes": { "src": "./index.js", "dest": "/" }
-}
+{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/api" }] }
